<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  
  <name>ranger_bringup</name>

  <version>1.0.0</version>

  <description>
    ROS 2 launch scripts to brungup Agilex Ranger Mini V2
  </description>

  <maintainer email="jalemangallegos@techfak.uni-bielefeld.de">Jesus Enrique Aleman Gallegos</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
