<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ranger_description</name>
  <version>1.1.0</version>
  <description>This package contains both the urdf and sdf of the Ranger Mini V2 from Agilex.</description>
  <maintainer email="jalemangallegos@techfak.uni-bielefeld.de">Jesus Enrique Aleman Gallegos</maintainer>

  <license>BSD 3-clause</license>
  <url>http://ros.org/wiki/urdf_tutorial</url>
  <author email="jalemangallegos@techfak.uni-bielefeld.de">Jesus Enrique Aleman Gallegos</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
