<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ranger_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo-specific implementations for the ros_gz_example project</description>
  <maintainer email="jalemangallegos@techfakuni-bielefeld.de">Jesus Enrique Aleman Gallegos</maintainer>
  <license>Apache 2.0</license>
  <author>Jesus Enrique Aleman Gallegos</author>

  <depend>ros_gz_example_description</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
